--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,5 @@ sites/*/settings*.php
 *./DS_Store
 
 # Ignore paths that contain user-generated content.
-# sites/*/files
+sites/*/files
 sites/*/private
