--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@ sites/*/settings*.php
 # Ignore paths that contain user-generated content.
 sites/*/files
 sites/*/private
+
+# Ignore espresso files
+.espressostorage
